[package]
name = "oxigdal-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxigdal-cli"
readme = "README.md"
description = "Command-line interface for OxiGDAL geospatial operations"
keywords = ["gis", "science", "gdal", "cli", "raster"]
categories = ["command-line-utilities", "science"]

[dependencies]
# Internal dependencies
oxigdal-core.workspace = true
oxigdal-algorithms.workspace = true
oxigdal-proj.workspace = true
# oxigdal-dev-tools.workspace = true  # Temporarily disabled due to build errors
oxigdal-geotiff.workspace = true
oxigdal-geojson.workspace = true
oxigdal-zarr.workspace = true
oxigdal-flatgeobuf.workspace = true
oxigdal-shapefile.workspace = true
oxigdal-geoparquet.workspace = true

# CLI dependencies
clap = { workspace = true, features = ["derive", "cargo", "color", "suggestions", "wrap_help"] }
clap_complete = "4"

# Progress and UI
indicatif = { workspace = true }
console = { workspace = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
num-traits.workspace = true
rayon.workspace = true
num_cpus.workspace = true

# Async runtime (for some operations)
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[[bin]]
name = "oxigdal"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
